v3/crates/metadata-resolve/tests/failing/glossary/duplicate_glossary_name/resolve_error.snap
---
source: crates/metadata-resolve/tests/metadata_golden_tests.rs
expression: string
input_file: crates/metadata-resolve/tests/failing/glossary/duplicate_glossary_name/metadata.json
---
Error: Duplicate glossary name 'Surfing (in subgraph default)'
    ╭─[ <unknown>:30:21 ]
    │
 30 │             "name": "Surfing",
    │                     ────┬────  
    │                         ╰────── Duplicate glossary name 'Surfing'
────╯
